--- a/.github/workflows/workflow-linter.yml
+++ b/.github/workflows/workflow-linter.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0  # Needed for proper diffing
+          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -143,13 +143,13 @@ import yaml
 import json
 from jsonschema import validate, ValidationError, SchemaError
 
-# Load schema
+# Load schema from correct location
 try:
-    with open('.github/workflows/workflow-schema.json', 'r') as f:
+    with open('.github/schema/workflow-schema.json', 'r') as f:
         schema = json.load(f)
-    print("✅ Schema loaded successfully")
+    print("✅ Schema loaded from .github/schema/workflow-schema.json")
 except FileNotFoundError:
-    print("⚠️  Schema file not found at .github/workflows/workflow-schema.json")
+    print("⚠️  Schema file not found at .github/schema/workflow-schema.json")
     print("   Skipping schema validation")
     sys.exit(0)
 except json.JSONDecodeError as e:
@@ -161,7 +161,7 @@ VALIDATED = 0
 
 # Validate all workflow files
 for file in os.listdir('.github/workflows'):
-    if file.endswith(('.yml', '.yaml')) and file != 'workflow-schema.json':
+    if file.endswith(('.yml', '.yaml')):
         path = os.path.join('.github/workflows', file)
         
         try:
@@ -178,7 +178,8 @@ for file in os.listdir('.github/workflows'):
                 VALIDATED += 1
                 print(f"  ✅ {file}")
             except ValidationError as e:
-                ERRORS.append(f"{file}: {e.message} (at path: {'.'.join(str(p) for p in e.path)})")
+                error_path = '.'.join(str(p) for p in e.path) if e.path else 'root'
+                ERRORS.append(f"{file}: {e.message} (at: {error_path})")
             
         except yaml.YAMLError as e:
             ERRORS.append(f"{file}: YAML parsing error - {e}")
@@ -445,7 +446,7 @@ PYEOF
           
           ## 🔍 Schema Validation
           
-          Your workflows are validated against `.github/workflows/workflow-schema.json`.
+          Your workflows are validated against `.github/schema/workflow-schema.json`.
           Make sure your workflow structure matches the required schema.
           
           ## 🚀 Quick Fix Command
