--- a/.github/workflows/frameworks-integrity-sync.yml
+++ b/.github/workflows/frameworks-integrity-sync.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Install tools (latest Pandoc + markdownlint)
         run: |
-          # Install latest Pandoc 3.9 via official deb (avoids apt repo problems)
+          # Install Pandoc 3.9 (latest as of Feb 2026) via official deb
           PANDOC_VERSION="3.9"
-          wget "https://github.com/jgm/pandoc/releases/download/\( {PANDOC_VERSION}/pandoc- \){PANDOC_VERSION}-amd64.deb"
-          sudo dpkg -i "pandoc-${PANDOC_VERSION}-amd64.deb" || sudo apt-get install -f -y
-          rm "pandoc-${PANDOC_VERSION}-amd64.deb"
-          pandoc --version  # Should print pandoc 3.9.x — debug output
+          wget "https://github.com/jgm/pandoc/releases/download/\( {PANDOC_VERSION}/pandoc- \){PANDOC_VERSION}-1-amd64.deb"
+          sudo dpkg -i "pandoc-${PANDOC_VERSION}-1-amd64.deb" || sudo apt-get install -f -y
+          rm "pandoc-${PANDOC_VERSION}-1-amd64.deb"
+          pandoc --version  # Debug: confirm 3.9.x installed
 
           # Install latest markdownlint-cli
           npm install -g markdownlint-cli
@@ -30,21 +30,21 @@ jobs:
         run: |
           echo "Starting conversion and linting in frameworks/..."
 
-          # Convert PDFs to MD (only if file matches .pdf)
+          # Convert PDFs to MD (only matching .pdf files)
           find frameworks -type f ! -name ".*" | while read -r file; do
             if [[ "\( file" =\~ \.pdf \) ]]; then
               output="${file%.pdf}.md"
               echo "Converting PDF: $file → $output"
               pandoc "$file" -o "$output" --wrap=preserve --markdown-headings=atx || {
-                echo "Pandoc conversion failed for $file — skipping removal"
+                echo "Pandoc failed for $file (skipping removal)"
                 continue
               }
               echo "Conversion successful: $output"
-              rm "$file"  # Optional: remove original PDF (comment out if you want to keep backups)
+              # rm "$file"  # Uncomment to remove original PDF after success
             fi
           done
 
-          # Lint & auto-fix all MD files in frameworks/
+          # Lint & auto-fix all MD files
           echo "Linting Markdown files..."
           find frameworks -type f -name "*.md" ! -name ".*" -exec markdownlint --fix {} \;
           echo "Markdown linting & auto-fixing complete."
